syntax = "proto3";
package compservice.model.protobuf;

import "google/protobuf/timestamp.proto";
import "common.proto";

message Event {
  google.protobuf.Timestamp timestamp = 1;
  int32 version = 2;
  int32 localEventNumber = 3;
  EventType type = 4;
  MessageInfo messageInfo = 5;
}

enum EventType {
  EVENT_TYPE_UNKNOWN = 0;
  ACADEMY_ADDED = 1;
  ACADEMY_REMOVED = 2;
  ACADEMY_UPDATED = 3;
  BRACKETS_GENERATED = 4;
  CATEGORY_ADDED = 5;
  CATEGORY_BRACKETS_DROPPED = 6;
  CATEGORY_DELETED = 7;
  CATEGORY_REGISTRATION_STATUS_CHANGED = 8;
  COMPETITION_CREATED = 9;
  COMPETITION_DELETED = 10;
  COMPETITION_PROPERTIES_UPDATED = 11;
  COMPETITORS_PROPAGATED_TO_STAGE = 12;
  COMPETITOR_ADDED = 13;
  COMPETITOR_CATEGORY_ADDED = 14;
  COMPETITOR_CATEGORY_CHANGED = 15;
  COMPETITOR_REMOVED = 16;
  COMPETITOR_UPDATED = 17;
  DASHBOARD_FIGHT_COMPETITORS_ASSIGNED = 18;
  DASHBOARD_FIGHT_RESULT_SET = 19;
  DASHBOARD_STAGE_RESULT_SET = 20;
  FIGHTS_ADDED_TO_STAGE = 21;
  FIGHTS_EDITOR_CHANGE_APPLIED = 22;
  FIGHTS_START_TIME_CLEANED = 23;
  FIGHTS_START_TIME_UPDATED = 24;
  FIGHT_ORDER_CHANGED = 25;
  MATS_UPDATED = 26;
  REGISTRATION_GROUP_ADDED = 27;
  REGISTRATION_GROUP_CATEGORIES_ASSIGNED = 28;
  REGISTRATION_GROUP_DELETED = 29;
  REGISTRATION_INFO_UPDATED = 30;
  REGISTRATION_PERIOD_ADDED = 31;
  REGISTRATION_PERIOD_DELETED = 32;
  SCHEDULE_DROPPED = 33;
  SCHEDULE_GENERATED = 34;
  STAGE_STATUS_UPDATED = 35;
}